Ground recommendation explanations in the signals that produced them
The landing page claimed more than the data supported: it said
"Recommended for You" whenever a visitor was signed in, even when every
card had fallen through to the trending filler, and a content-based hit
matched purely on tag overlap still told the buyer they had looked at
that category. The personalised flag is now derived from the provenance
of the returned items, and the content-based reason distinguishes a real
category match from a shared tag.

A search keyword must also be at least two characters before it is
stored or credited, so a one-letter search can no longer overwrite every
genuine reason on the page. This aligns each explanation with the
evidence behind it rather than with the viewer's login state.